增加随机选择权重，修改项目目录结构，增加CItems类来完成与随机项目有关的功能

--- a/res/mainwindows.qrc
+++ b/res/mainwindows.qrc
@@ -1,5 +1,5 @@
 <RCC>
     <qresource prefix="/config">
-        <file>config/cfg.ini</file>
+        <file>config/cfg.csv</file>
     </qresource>
 </RCC>
