--- a/ui/setting.ui
+++ b/ui/setting.ui
@@ -81,6 +81,47 @@
        </property>
       </widget>
      </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="qLanguageLabel">
+       <property name="styleSheet">
+        <string notr="true">font: 500 10pt &quot;思源黑体 CN Medium&quot;;</string>
+       </property>
+       <property name="text">
+        <string>Language</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <item>
+        <widget class="QRadioButton" name="qChineseRadioButton">
+         <property name="text">
+          <string>Chinese</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QRadioButton" name="qEnglishRadioButton">
+         <property name="text">
+          <string>English</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </item>
     </layout>
    </item>
    <item alignment="Qt::AlignHCenter">
