--- a/ui/setting.ui
+++ b/ui/setting.ui
@@ -37,6 +37,12 @@
      </property>
      <item row="0" column="0">
       <widget class="QLabel" name="qWeightSelectLabel">
+       <property name="minimumSize">
+        <size>
+         <width>101</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="styleSheet">
         <string notr="true">font: 500 10pt &quot;思源黑体 CN Medium&quot;;</string>
        </property>
@@ -47,6 +53,12 @@
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="qDynamicWeightLabel">
+       <property name="minimumSize">
+        <size>
+         <width>101</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="styleSheet">
         <string notr="true">font: 500 10pt &quot;思源黑体 CN Medium&quot;;</string>
        </property>
@@ -83,6 +95,12 @@
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="qLanguageLabel">
+       <property name="minimumSize">
+        <size>
+         <width>101</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="styleSheet">
         <string notr="true">font: 500 10pt &quot;思源黑体 CN Medium&quot;;</string>
        </property>
@@ -95,6 +113,12 @@
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <widget class="QRadioButton" name="qChineseRadioButton">
+         <property name="minimumSize">
+          <size>
+           <width>68</width>
+           <height>0</height>
+          </size>
+         </property>
          <property name="text">
           <string>Chinese</string>
          </property>
@@ -102,6 +126,12 @@
        </item>
        <item>
         <widget class="QRadioButton" name="qEnglishRadioButton">
+         <property name="minimumSize">
+          <size>
+           <width>68</width>
+           <height>0</height>
+          </size>
+         </property>
          <property name="text">
           <string>English</string>
          </property>
